# learning_ros2

./: README.md
m01_ros2_environment/: m01_ros2_environment.md  m01_ros2_installation.md  ros2_installation.sh
m02_ros2_communication/: m02_ros2_communication.md
m02_ros2_communication/m02_base_figure/: CMakeLists.txt  package.xml
m02_ros2_communication/m02_base_figure/include/m02_base_figure/: base_figure.hpp
m02_ros2_communication/m02_base_figure/src/: area_calculator.cpp  area_node.cpp
m02_ros2_communication/m02_figure_plugins/: CMakeLists.txt  package.xml  plugins.xml
m02_ros2_communication/m02_figure_plugins/include/m02_figure_plugins/: figure_plugins.hpp  visibility_control.h
m02_ros2_communication/m02_figure_plugins/src/: figure_plugins.cpp  m02_figure_plugins.cpp
m02_ros2_communication/m02_plugins_figure/: CMakeLists.txt  package.xml  plugings.xml  plugins.xml
m02_ros2_communication/m02_plugins_figure/include/m02_plugings_figure/: m02_polygon_plugins.hpp  visibility_control.h
m02_ros2_communication/m02_plugins_figure/src/: plugins_figure.cpp
m02_ros2_communication/m02_polygon_base/: CMakeLists.txt  package.xml
m02_ros2_communication/m02_polygon_base/include/m02_polygon_base/: base_figure.hpp
m02_ros2_communication/m02_polygon_base/src/: area_node.cpp
m02_ros2_communication/m02_polygon_plugins/: CMakeLists.txt  package.xml
m02_ros2_communication/m02_polygon_plugins/src/: polygon_plugins.cpp
m02_ros2_communication/m02_ros2_with_cpp/: CMakeLists.txt  package.xml
m02_ros2_communication/m02_ros2_with_cpp/action/: RegularMove.action
m02_ros2_communication/m02_ros2_with_cpp/config/: background_colors.yaml
m02_ros2_communication/m02_ros2_with_cpp/include/m02_ros2_with_cpp/: exam_cli_comp.hpp  exam_srv_comp.hpp  int64_pub_comp.hpp  int64_sub_comp.hpp  visibility_control.h
m02_ros2_communication/m02_ros2_with_cpp/launch/: composition_exam_srv_cli.launch.py  composition_int_pub_sub.launch.py  turtlesim_background.launch.py  turtlesim_simple_mov.launch.py  turtlesim_spawn.launch.py  turtlesim_with_yaml.launch.py
m02_ros2_communication/m02_ros2_with_cpp/msg/: RarePoint.msg
m02_ros2_communication/m02_ros2_with_cpp/src/: Comp_dlopen.cpp  add_two_nums_cli.cpp  add_two_nums_srv.cpp  comp_dlopen.cpp  comp_linktime.cpp  comp_manual.cpp  exam_cli_comp.cpp  exam_srv.cpp  exam_srv_comp.cpp  int64_pub.cpp  int64_pub_comp.cpp  int64_sub.cpp  int64_sub_comp.cpp  intra_com_1_node.cpp  intra_com_2_nodes.cpp  param_check.cpp  rand_xy_pub.cpp  saying_hi.cpp  simple_turtle_mov.cpp  turtle_action_cli.cpp  turtle_action_srv.cpp  turtle_challenge.cpp
m02_ros2_communication/m02_ros2_with_cpp/srv/: Answer.srv
m02_ros2_communication/m02_ros2_with_py/: package.xml  setup.cfg  setup.py
m02_ros2_communication/m02_ros2_with_py/config/: background_colors.yaml
m02_ros2_communication/m02_ros2_with_py/launch/: turtlesim_background.launch.py  turtlesim_simple_mov.launch.py  turtlesim_with_yaml.launch.py
m02_ros2_communication/m02_ros2_with_py/m02_ros2_with_py/: add_two_nums_cli.py  add_two_nums_srv.py  hello_node.py  int64_pub.py  int64_sub.py  saying_hi.py  set_bool_cli.py  set_bool_srv.py  simple_turtle_mov.py  turtle_action_cli.py  turtle_action_srv.py  turtle_challenge.py
m02_ros2_communication/m02_ros_with_py/: package.xml  setup.cfg  setup.py
m02_ros2_communication/m02_ros_with_py/m02_ros_with_py/: hello_node.py
m03_robot_description/: m03_robot_description.md
m03_robot_description/m03_tf2_with_cpp/: CMakeLists.txt  package.xml
m03_robot_description/m03_tf2_with_cpp/launch/: lettuce_fix_frame.launch.py  tf2_demo.launch.py
m03_robot_description/m03_tf2_with_cpp/src/: lettuce_frame.cpp  static_broadcaster.cpp  turtle_broadcaster.cpp  turtle_listener.cpp
m03_robot_description/m03_tf2_with_py/: package.xml  setup.cfg  setup.py
m03_robot_description/m03_tf2_with_py/launch/: lettuce_dyn_frame.launch.py  lettuce_fix_frame.launch.py  tf2_demo.launch.py
m03_robot_description/m03_tf2_with_py/m03_tf2_with_py/: lettuce_frame.py  lettuce_stick_frame.py  static_broadcaster.py  turtle_broadcaster.py  turtle_listener.py
m03_robot_description/m03_using_urdf/: CMakeLists.txt  package.xml
m03_robot_description/m03_using_urdf/launch/: display_urdf.launch.py  display_xacro.launch.py
m03_robot_description/m03_using_urdf/meshes/: l_finger.dae  l_finger_tip.dae
m03_robot_description/m03_using_urdf/rviz/: robot_model.rviz  tf_and_model.rviz
m03_robot_description/m03_using_urdf/urdf/: r2d2.urdf  r2d2_model.urdf  r2d2_model.urdf.xacro
m04_robot_simulation/: m04_robot_simulation.md
ma01_docker_and_ros/iron_irwini/.devcontainer/: .devcontainer.json  Dockerfile
