<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m02_plugins_figure</name>
  <version>0.0.0</version>
  <description>A package for implementing plugins</description>
  <maintainer email="dfelipe.lopez@gmail.com">dan1620</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>m02_polygon_base</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
